[gd_scene load_steps=30 format=3 uid="uid://cvq82ilc0fnx2"]

[ext_resource type="Texture2D" uid="uid://bs40hfhf0pn27" path="res://Sprites/01_[Idle].png" id="1_8qxrv"]
[ext_resource type="Script" path="res://Scripts/AnimatedSprite2D.gd" id="1_po45i"]
[ext_resource type="Texture2D" uid="uid://2d0nakmv1vey" path="res://Sprites/03_[Work_Loop].png" id="2_lkbcf"]
[ext_resource type="PackedScene" uid="uid://hk068klcxcbh" path="res://Scenes/DialogueBox.tscn" id="4_eporm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hnb1q"]
atlas = ExtResource("1_8qxrv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueshx"]
atlas = ExtResource("1_8qxrv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pptty"]
atlas = ExtResource("1_8qxrv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5qpv"]
atlas = ExtResource("1_8qxrv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ghr"]
atlas = ExtResource("1_8qxrv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yci1g"]
atlas = ExtResource("1_8qxrv")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m78gu"]
atlas = ExtResource("1_8qxrv")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0amti"]
atlas = ExtResource("1_8qxrv")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gbq2"]
atlas = ExtResource("1_8qxrv")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h85r7"]
atlas = ExtResource("1_8qxrv")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51srt"]
atlas = ExtResource("1_8qxrv")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk867"]
atlas = ExtResource("1_8qxrv")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it825"]
atlas = ExtResource("2_lkbcf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el1hw"]
atlas = ExtResource("2_lkbcf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfsal"]
atlas = ExtResource("2_lkbcf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjn18"]
atlas = ExtResource("2_lkbcf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2eg"]
atlas = ExtResource("2_lkbcf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5fqp"]
atlas = ExtResource("2_lkbcf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tk20"]
atlas = ExtResource("2_lkbcf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaiu0"]
atlas = ExtResource("2_lkbcf")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr5lc"]
atlas = ExtResource("2_lkbcf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvq2l"]
atlas = ExtResource("2_lkbcf")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6hd2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnb1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueshx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pptty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5qpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ghr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yci1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m78gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0amti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gbq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h85r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51srt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk867")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_it825")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el1hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfsal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjn18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5fqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tk20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaiu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr5lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvq2l")
}],
"loop": true,
"name": &"Working",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2vko"]
size = Vector2(114, 134)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dt8c"]
size = Vector2(162, 158)

[node name="Blacksmith" type="Area2D"]
texture_filter = 1
script = ExtResource("1_po45i")

[node name="BlacksmithS" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(14, -38)
scale = Vector2(3.98438, 3.98438)
sprite_frames = SubResource("SpriteFrames_b6hd2")
animation = &"Idle"
frame_progress = 0.10065

[node name="ChangeType" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, 18)
shape = SubResource("RectangleShape2D_e2vko")

[node name="InteArea" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
collision_layer = 2
collision_mask = 2

[node name="Interaction" type="CollisionShape2D" parent="InteArea"]
light_mask = 3
visibility_layer = 3
position = Vector2(-3, 14)
shape = SubResource("RectangleShape2D_0dt8c")

[node name="DialogueBox" parent="." instance=ExtResource("4_eporm")]

[connection signal="timeout" from="ChangeType" to="." method="_on_change_type_timeout"]
